--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
     <section id = "point négatifs">
         <h2>Points négatifs  
-            <p>Cependant, malgré leur grande utlité, les IA soulèvent des inquiétudes éthiques, peuvent entraîner la disparition d'emplois et comportent des risques pour la confidentialité de nos données, mises entre les mains de sociétés privées.</p>
+            <p>Cependant, malgré leur grande utlité, les IA soulèvent des inquiétudes éthiques. Elles peuvent entraîner la disparition d'emplois et comportent des risques pour la confidentialité de nos données personnelles mises entre les mains de sociétés privées.</p>
             <p>Une étude publiée dans le British Medical Journal conclut à "la nécéssité d'une pause dans le développement de l'intelligence artificielle pour réfléchir à une réglementation adaptée à partir de principes clairs."</p>
             <p>En automne 2017, sur le site web <a href="https://www.reddit.com/">Reddit</a>, une nouvelle technologie faisait intervenir les IA émergea : le <B>DeepFake</B>. Cette technique de synthèse multimédia repose sur un principe de superposition de fichiers vidéo ou audio existants sur d'autres fichiers vidéo ou audio.  Elle se base sur une reconnaissance des traits du visage ou de l'intonations et l'accent d'une personne pour lui faire dire et/ou faire des choses n'ayant jamais eu lieu.
             Cependant, cette technique peut être utilisée pour créer des infox et des canulars malveillants (arnaques).
