--- a/index.html
+++ b/index.html
@@ -112,9 +112,11 @@
     <section id = "conclusion">
         <h2>Conclusion 
             <p>Les intelligences artificielles sont d'une grande aide. De nos jours, elles optimisent la production dans tous les domaines professionnels et permettent même de sauver des vies !
-                Néanmoins, nous devons garder à l'idée que celles-ci sont des aides, ne doivent pas devenir essentiel à notre développement et que nous devons éviter d'en dépendre.
+                Néanmoins, nous devons être conscients que celles-ci ne sont que des aides. Elles ne doivent pas devenir essentielles dans notre quotidien sans en devenir dépendants.
             <br>
-                En tant que futurs citoyens et acteurs de la vie actif, nous devons de nous interroger sur les réels enjeux de ces technologies en perpétuelle évolution et devons faire de nos données et notre confidentialité une priorité !
+                En tant que futurs citoyens et acteurs de la vie active, nous devons de nous interroger sur les réels enjeux de ces technologies en perpétuelle évolution. Il est impératif que nos données personnelles restent confidentielles.</p>
+            
+            <p><I>"Si c'est gratuit, c'est que vous êtes le produit"</I></p>
             </p>
         </h2>
     </section>
