--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <section id = "conclusion">
         <h2>Conclusion 
             <p>Les intelligences artificielles sont d'une grande aide. De nos jours, elles optimisent la production dans tous les domaines professionnels et permettent même de sauver des vies !
-                Néanmoins, nous devons être conscients que celles-ci ne sont que des aides. Elles ne doivent pas devenir essentielles à notre quotidien et nous devons eviter d'en dépendre.
+                Néanmoins, nous devons être conscients que celles-ci ne sont que des aides. Elles ne doivent pas devenir essentielles à notre quotidien et nous devons éviter d'en dépendre.
             <br>
                 En tant que futurs citoyens et acteurs de la vie active, nous devons de nous interroger sur les réels enjeux de ces technologies en perpétuelle évolution. Il est impératif que nos données personnelles restent confidentielles.</p>
             
