--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 <li>Site Mozilla développeur</li>
                 <li>Youtube : chaîne Graven, tutoriels d'apprentissage aux languages HTML et CSS</li>
                 <li>Frère de Neyl : élève en STI2D <div id = "easter_egg"><a href = img\remerciement.png><img src = img\easter_egg.gif alt = easter_egg width="200"></a></div></li> 
-                <li><B></B>Beaucoup</B> de patience...</li>
+                <li>Beaucoup de patience...</li>
             </ul>
         </h2>
     </section>
