--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
             <div class = "h3">Il existe 3 types d’IA : </div> 
 
             <ul>
-                <li> <B>L'intelligence artificielle étroite (ANI)</B> est spécialisée dans une gamme étroite de tâches : ChatBots (ChatGPT, SimSimi...), voitures autonomes (Tesla), reconnaissance vocal (Siri, Alexa...)...
+                <li> <B>L'intelligence artificielle étroite (ANI)</B> 
                 <br>
-                Ce type d'IA est le plus rependu et le seul actuellement appliqué.</li>
+                L'ANI est spécialisée dans une gamme étroite de tâches : ChatBots (ChatGPT, SimSimi...), voitures autonomes (Tesla), reconnaissance vocal (Siri, Alexa...)...
                 <br>
                 <li> <B>L'intelligence artificielle générale (AGI)</B>
                 <br>
